Fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 	display: grid;
 	grid-template-columns: 50% 50%;
 	grid-template-rows: auto;
-	width: 90%
+	width: 100%
 }
 
 .App-body div {
